# qli

./: Cargo.toml  README.md  publish.sh
examples/: google.json  google.yaml
src/: lib.rs  main.rs
