[package]
name = "qli"
version = "0.1.0"
edition = "2021"
include = ["src/**.rs", "Cargo.*", "README.md", "LICENSE"]
authors = ["Brian3647 <victoris3647@gmail.com>"]
license = "MIT"
description = "🐳 Extremelly small rust binary to generate http requests using json/yaml"
homepage = "https://github.com/Brian3647/qli"
repository = "https://github.com/Brian3647/qli"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
structopt = "0.3.26"

[[bin]]
name = "qli"
path = "src/main.rs"
